corrected footer's spacing

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,13 @@ footer,
   color: white;
   padding: 10px 170px;
 }
+
 .container-fluid {
   font-size: 30px;
+}
+.content {
+  margin: 0 auto;
+  display: flex;
 }
 .footer-navbar > .container,
 .footer-navbar > .footer-navbar-content,
